@@ -42,6 +42,7 @@ BUG FIXES
          kvm_open(3) not being called. (patch by Jean Sebastien)
  * #338: [Linux] disk_io_counters() fails to find some disks.
  * #353: [OSX] get_users() returns an empty list on OSX 10.8.
+ * #365: Process.wait() should check PID has not been reused by another process.
 
 API CHANGES
 
